noinst_LTLIBRARIES = libavoid.la libtwine.la

libavoid_la_SOURCES = \
	libavoid/connector.cpp \
	libavoid/geometry.cpp \
	libavoid/graph.cpp \
	libavoid/router.cpp \
	libavoid/makepath.cpp \
	libavoid/polyutil.cpp \
	libavoid/region.cpp \
	libavoid/shape.cpp \
	libavoid/static.cpp \
	libavoid/timer.cpp \
	libavoid/vertices.cpp \
	libavoid/visibility.cpp

libtwine_la_CFLAGS = -O3 -pedantic -ffast-math
libtwine_la_SOURCES = \
	twines/rb.c \
	twines/twine.c



## include_HEADERS = libavoid.h twine.h