noinst_LIBRARIES = libavoid.a libtwine.a

libavoid_a_SOURCES = \
	libavoid/connector.cpp \
	libavoid/geometry.cpp \
	libavoid/graph.cpp \
	libavoid/router.cpp \
	libavoid/makepath.cpp \
	libavoid/polyutil.cpp \
	libavoid/region.cpp \
	libavoid/shape.cpp \
	libavoid/static.cpp \
	libavoid/timer.cpp \
	libavoid/vertices.cpp \
	libavoid/visibility.cpp

libtwine_a_CFLAGS = -O3 -pedantic -ffast-math
libtwine_a_SOURCES = \
	twines/rb.c \
	twines/twine.c



## include_HEADERS = libavoid.h twine.h